--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="{{ site.baseurl }}/pwa/manifest.json">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="{{ site.baseurl }}/img/222.ico">
+    <link rel="shortcut icon" href="{{ site.baseurl }}/img/panda.ico">
 
     <!-- Safari Webpage Icon    by-BY -->
     <link rel="apple-touch-icon" href="{{ site.baseurl }}/img/apple-touch-icon.png">
